comentários, documentação, clone no bullsandcowscode